test/corpus/if_expression.txt
==================
Simple if expression
==================

if x < 5 {
  "less than five"
}

---

(source_file
  (if_expression
    condition: (binary_expression
      left: (path
        (identifier))
      right: (integer))
    consequence: (block
      (static_string))))

==================
If-else expression
==================

if x < 5 {
  "less than five"
} else {
  "not less than five"
}

---

(source_file
  (if_expression
    condition: (binary_expression
      left: (path
        (identifier))
      right: (integer))
    consequence: (block
      (static_string))
    alternative: (block
      (static_string))))

==================
If-else-if-else expression
==================

if x < 5 {
  "less than five"
} else if x > 10 {
  "more than ten"
} else {
  "between five and ten"
}

---

(source_file
  (if_expression
    condition: (binary_expression
      left: (path
        (identifier))
      right: (integer))
    consequence: (block
      (static_string))
    alternative: (if_expression
      condition: (binary_expression
        left: (path
          (identifier))
        right: (integer))
      consequence: (block
        (static_string))
      alternative: (block
        (static_string)))))

==================
Nested if expressions
==================

if a {
  if b {
    "a and b"
  } else {
    "a but not b"
  }
} else {
  "not a"
}

---

(source_file
  (if_expression
    condition: (path
      (identifier))
    consequence: (block
      (if_expression
        condition: (path
          (identifier))
        consequence: (block
          (static_string))
        alternative: (block
          (static_string))))
    alternative: (block
      (static_string))))
